--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         </nav>
     </header>
     <section>
-     <img src="lap.jpeg" class="imagecheck">
+     <img src="./final/lap.jpeg" class="imagecheck">
     </section>
     <article>
         <div class="c3">
-            <img src="html.png">
+            <img src="./final/html.png">
             <h1>HTML</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt minus necessitatibus porro nam maxime repudiandae sint iusto doloribus quaerat quidem tempore consequuntur quod sed, reprehenderit optio consequatur dolores animi id!</p>
         </div>
         <div class="c3">
-            <img src="css.png">
+            <img src="./final/css.png">
             <h1>CSS</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet nostrum molestias in dolores neque distinctio nesciunt accusantium blanditiis impedit eligendi voluptatibus tenetur, repellat amet ea officia culpa. Ad, ea.</p>
         </div>
         <div class="c3">
-            <img src="icon.png">
+            <img src="./final/icon.png">
             <h1>JavaScript</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eligendi necessitatibus facilis rem aspernatur consectetur id cupiditate aliquam inventore pariatur ad? Quis sequi voluptates numquam doloribus exercitationem fuga cumque assumenda!</p>
         </div>
